docs update in prep for publishing